Fix z-index

--- a/app/assets/stylesheets/layouts/l-data-portal-country.scss
+++ b/app/assets/stylesheets/layouts/l-data-portal-country.scss
@@ -88,6 +88,11 @@
 
   .l-intro {
     .l-title {
+
+      .js-header {
+        z-index: 3;
+      }
+
       .container {
         @media #{$mq-tablet} {
           display: flex;
